[gd_scene load_steps=4 format=3 uid="uid://c7qca6i2c2ow3"]

[ext_resource type="Theme" uid="uid://da2feywqtmki" path="res://theme.tres" id="1_k6wvt"]
[ext_resource type="Script" path="res://scenes/ui/pause.gd" id="2_tli4u"]

[sub_resource type="Theme" id="Theme_cb5ev"]
Button/font_sizes/font_size = 54

[node name="pause" type="Control"]
process_mode = 3
z_index = 3000
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_k6wvt")
script = ExtResource("2_tli4u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.435294, 0.435294, 0.435294, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TitleMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 70

[node name="TitleText" type="Label" parent="VBoxContainer/TitleMargin"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 72
text = "Pause Menu"
horizontal_alignment = 1

[node name="ButtonsMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 16

[node name="HFlowContainer" type="VFlowContainer" parent="VBoxContainer/ButtonsMargin"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_cb5ev")

[node name="Resume" type="Button" parent="VBoxContainer/ButtonsMargin/HFlowContainer"]
layout_mode = 2
text = "Resume"

[node name="PlayerList" type="Button" parent="VBoxContainer/ButtonsMargin/HFlowContainer"]
layout_mode = 2
text = "Map"

[node name="EditPalette" type="Button" parent="VBoxContainer/ButtonsMargin/HFlowContainer"]
layout_mode = 2
text = "Edit Palette"

[node name="EditDog" type="Button" parent="VBoxContainer/ButtonsMargin/HFlowContainer"]
layout_mode = 2
text = "Edit Dog"

[node name="SetTitle" type="Button" parent="VBoxContainer/ButtonsMargin/HFlowContainer"]
layout_mode = 2
text = "Set Title Paint"

[node name="Settings" type="Button" parent="VBoxContainer/ButtonsMargin/HFlowContainer"]
layout_mode = 2
text = "Settings"

[node name="LeaveServer" type="Button" parent="VBoxContainer/ButtonsMargin/HFlowContainer"]
layout_mode = 2
text = "Leave Server"

[connection signal="pressed" from="VBoxContainer/ButtonsMargin/HFlowContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsMargin/HFlowContainer/PlayerList" to="." method="_on_player_list_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsMargin/HFlowContainer/EditPalette" to="." method="_on_edit_palette_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsMargin/HFlowContainer/EditDog" to="." method="_on_edit_dog_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsMargin/HFlowContainer/SetTitle" to="." method="_on_set_title_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsMargin/HFlowContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsMargin/HFlowContainer/LeaveServer" to="." method="_on_leave_server_pressed"]
